--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mkcert": "^3.2.0",
     "nodemon": "^3.1.11",
     "promise-mysql": "^5.2.0"
   }
